--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-# Ignore all log files
+# Ignore all generated files
 *.log
+*.pyc
+*.json
 
 # Ignore .DS_Store files
 *.DS_Store
-
-# Ignore .pyc files
-*.pyc
