--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,12 @@
     "react-uuid": "^1.0.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ejs": ">=3.1.7",
+    "async": ">=2.6.4",
+    "minimist": ">=1.2.6",
+    "node-forge": ">=1.3.0",
+    "nth-check": ">=2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
