--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,11 @@
     "express-fileupload": "^1.3.1",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
-    "python-shell": "^3.0.1"
+    "python-shell": "^3.0.1",
+    "ejs": ">=3.1.7",
+    "async": ">=2.6.4",
+    "minimist": ">=1.2.6",
+    "node-forge": ">=1.3.0",
+    "nth-check": ">=2.0.1"
   }
 }
