--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,7 @@
     "ejs": ">=3.1.7",
     "async": ">=2.6.4",
     "minimist": ">=1.2.6",
-    "node-forge": ">=1.3.0",
-    "nth-check": ">=2.0.1"
+    "node-forge": ">=1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
