--- a/client/package.json
+++ b/client/package.json
@@ -7,24 +7,25 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "async": ">=2.6.4",
     "axios": "^0.26.0",
     "d3": "^5.16.0",
     "d3-force": "^3.0.0",
     "d3-simple-slider": "^1.10.4",
+    "ejs": ">=3.1.7",
+    "minimist": ">=1.2.6",
+    "node-forge": ">=1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-switch": "^6.0.0",
     "react-uuid": "^1.0.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.4",
-    "ejs": ">=3.1.7",
-    "async": ">=2.6.4",
-    "minimist": ">=1.2.6",
-    "node-forge": ">=1.3.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
